Added my first post, soon on the NY Post front page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 
 	Mi Blog
 
+	<h2>First Post</h2>
+
+	Lorem fistrum llevame al sircoo está la cosa muy malar fistro. Diodeno fistro por la gloria de mi madre me cago en tus muelas qué dise usteer de la pradera qué dise usteer caballo blanco caballo negroorl qué dise usteer me cago en tus muelas pecador. Condemor ese pedazo de qué dise usteer ese pedazo de. A wan pupita se calle ustée me cago en tus muelas. Ahorarr qué dise usteer ese hombree a peich pecador condemor pecador diodeno diodenoo. Pupita la caidita al ataquerl ahorarr a wan te voy a borrar el cerito ahorarr tiene musho peligro. La caidita qué dise usteer me cago en tus muelas benemeritaar papaar papaar tiene musho peligro qué dise usteer papaar papaar.
+
+
 	</body>
 
 
